[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mrc2omezarr"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]
dependencies = [
    "numpy",
    "click",
    "mrcfile",
    "ome-zarr",
    "zarr<3",
    "pydantic>2",
    "fsspec",
    "pydantic-ome-ngff"
]
authors = [
  {name = "Utz H. Ermel", email = "utz@ermel.me"},
]
description = "Command line tool to convert MRC-files to OME-Zarr."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["cryoet", "cryo-et", "tomography", "zarr", "ome", "mrc", "conversion"]

[project.urls]
Repository = "https://github.com/uermel/mrc2omezarr.git"
Issues = "https://github.com/uermel/mrc2omezarr/issues"

[project.scripts]
mrc2omezarr = "mrc2omezarr.cli:convert"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/mrc2omezarr/_version.py"

[project.optional-dependencies]
dev = [
    "black",
    "ipython",
    "pre-commit",
    "ruff",
    "notebook",
]

[tool.black]
line-length = 120
target_version = ['py311']

[tool.ruff]
select = [
    "E", "W",  # pycodestyle
    "F",  # pyflakes
    "B",  # bugbear
    "I",  # isort
    "N",  # pep8-naming
    "ASYNC",  # async
    "COM",  # commas
    "C4",  # comprehensions
    "DTZ",  # datetimez
    "ISC",  # implicit-str-concat
    "G",  # logging-format
    "T20",  # print
    "SIM",  # simplify
]
ignore = [
    "E501",  # line too long
    "C408",  # rewrite empty built-ins as literals
    "T201",  # print statements.
    "DTZ007", # Datetime objects without timezones.
    "DTZ005", # More datetimes without timezones.
]
line-length = 120
target-version = "py311"

[tool.ruff.isort]
known-first-party =["common"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
